# OnlineShop

./: .gitignore  CONTRIBUTING.md  README.md  license  pyproject.toml
apps/account/: admin.py  forms.py  models.py  validator.py
apps/account/management/commands/: createuser.py
apps/account/migrations/: 0002_initial.py  0003_alter_user_email_alter_user_first_name_and_more.py  0004_alter_user_email_alter_user_phone_number.py
settings/: settings.py  urls.py
templates/: base.html  footer.html  navbar.html
