[tool.poetry]
name = "shop-proj"
version = "0.1.0"
description = ""
authors = ["nima <ssu87556@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
